<resources>
    <string name="app_name">AgriChain Consumer</string>
    <string name="welcome">Welcome</string>
    <string name="select_role">Select Your Role</string>
    <string name="farmers_name">Farmers</string>
    <string name="consumers_name">Consumers</string>
    <string name="enter_phone">Please Enter Your Number</string>
    <string name="verify">Get OTP</string>
    <string name="phone_number">Enter Your Number</string>
    <string name="six_digit_otp">Enter 6 Digit Otp</string>
    <string name="InvalidOtp">Otp Entered is Invalid ! Try Again</string>

    <string name="noProductsAdded">You Haven\'t Added Any Items Yet</string>
    <string name="add_product">Add Product</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="vegetables">Vegetables</string>
    <string name="fruits">Fruits</string>
    <string name="handloom">Handloom</string>
    <string name="manures">Manures</string>
    <string name="dairy">Dairy</string>
    <string name="add_custom">Add Custom</string>
    <string name="select_product_type">1. Select Your Product Type</string>
    <string name="click_here_to_add_photo">Click Here to Add Photo</string>
    <string name="add_photo_product">3. Add a photo of your product</string>
    <string name="click_here">Click Here</string>
    <string name="add_product_details">4. Add product details</string>
    <string name="add_product_name">2. Add product Name</string>
    <string name="eg_tomato">eg. Tomato</string>
    <string name="harvested_date">5. Add Harvested/Manufactured Date</string>
    <string name="harvested_date_format">eg. 08–04–2023</string>
    <string name="expiry_date">6. Add Expiry Date</string>
    <string name="price">7. Set your price</string>
    <string name="eg_40">eg. ₹40</string>
    <string name="preview_product">Preview</string>
    <string name="product_type">1. Product type</string>
    <string name="product_name">2. Product Name</string>
    <string name="_3_product_image">3. Product Image</string>
    <string name="product_description">4. Product Description</string>
    <string name="_harvested_date">5. Harvest/Manufactured Date</string>
    <string name="_expiry_date">6. Expiry Date</string>
    <string name="_price">7. Price</string>
    <string name="confirm_and_add_product">Confirm and Add Product</string>
    <string name="searching_text_consumers">Searching Vegis, Fruits, Dairy …</string>
    <string name="subtitle_search_text">we made this easy for you</string>
    <string name="extended_fab_label">Your Cart</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="distance">5 Km Away</string>
    <string name="added_on">Added On</string>
    <string name="checkout">Checkout</string>
    <string name="Fields_not_empty">Fields cannot be empty</string>
    <string name="go_to_dashboard">Go to Dashboard</string>
    <string name="product_listed">Product Listed!</string>
    <string name="description">Description</string>
    <string name="expire_date">Expire Date</string>
    <string name="edit_details">Edit Details</string>
    <string name="wallet_not_created">You haven\'t created Wallet yet</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="enter_wallet_details">Enter Wallet Details</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_wallet_name">Enter wallet Name</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="wallet_password">Wallet Password</string>
    <string name="acc_address">Acc Address</string>
    <string name="copy_address">Copy Address and Checkout Wallet</string>
    <string name="enter_wallet_address">Enter Wallet Address</string>
    <string name="send_fund">Send Fund</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="total_eths_required">Total Amount Required</string>
    <string name="expected_delivery_date">Expected Delivery Date</string>
    <string name="delivery_cost">Delivery Cost</string>
    <string name="total_amount">Total Amount</string>
    <string name="view_order">View Order</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="payment_details">Payment Details</string>
    <string name="creating_wallet_please_wait">Redirecting Please wait for a while…</string>
    <string name="order_status">Order Status :</string>
    <string name="proceed_to_buy">Proceed To Buy</string>
    <string name="area_street_colony">Area/Street/Colony</string>
    <string name="flat_no_building_name">Flat No/Building Name</string>
    <string name="use_this_address">Use this address</string>
    <string name="shipping_to">Shipping to :</string>
    <string name="items">Items</string>
    <string name="delivery_charges">delivery charges</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile\t\t</string>
    <string name="place_order">Place Order</string>
    <string name="confirmDetails">Confirm Details</string>
    <string name="processing">Processing Payment...</string>
    <string name="in_process">Processing...</string>
    <string name="retry">Retry</string>
    <string name="add_address">Add Address</string>
    <string name="product_details">Product Details</string>
    <string name="seeding_date">Planting Date</string>
    <string name="price_text">Price</string>
    <string name="product_journey">Product Journey</string>
    <string name="order_preview">Order Preview</string>
    <string name="ready_to_ship">Ready To Ship</string>
    <string name="status">Status</string>
    <string name="logout">Logout</string>
    <string name="contact_us">Contact Us</string>
    <string name="offers">Offers</string>
    <string name="wishlist">WishList</string>
    <string name="orders">Orders</string>
    <string name="payment">Payment</string>
    <string name="shipment_location">Shipment location :</string>
    <string name="payment_status">Payment Status:</string>
    <string name="in_transit">In Transit</string>
    <string name="order_details">Order Details</string>


</resources>