<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/consumerHomeFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"
        />

    <item
        android:id="@+id/walletFragment"
        android:icon="@drawable/baseline_account_balance_wallet_24"
        android:title="@string/wallet" />

    <item
        android:id="@+id/scanBarCode"
        android:title="" />

    <item
        android:id="@+id/consumerPreviewPaymentFragment"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/cart" />


    <item
        android:id="@+id/profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />


</menu>