<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".consumer.ui.fragments.ConsumerCartFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_checkout_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_list_of_cart"
        tools:itemCount="1"
        android:visibility="visible"
        />

        <View
            android:id="@+id/viewLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rv_checkout_products"
            android:background="@color/primary_text_color" />

        <TextView
            android:id="@+id/tv_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewLine"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/primary_text_color"
            android:text="@string/payment_details"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/viewLine2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_payment"
            android:background="@color/primary_text_color" />
        <LinearLayout
            android:id="@+id/cardViewPayment"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/langbuttondesign"
            android:layout_below="@id/viewLine2"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tv_payment_method"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/total_amount"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_amount_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="₹45"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_Delivery_charge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/tv_payment_method"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/delivery_cost"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_delivery_charge_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/tv_amount_value"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Free"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_expected_delivery_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/tv_Delivery_charge"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/expected_delivery_date"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_expected_delivery_date_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/tv_delivery_charge_value"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="17-04-2023"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_eths_required"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/tv_expected_delivery_date"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/total_eths_required"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_eths_required_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/tv_eths_required"
                    android:layout_marginEnd="10dp"
                    android:layout_alignEnd="@+id/tv_eths_required"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardViewPayment"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_pay_ether"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/langbuttondesign"
                android:text="@string/checkout"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:id="@+id/progressBarCheckout" />

        </RelativeLayout>




</RelativeLayout>

</androidx.core.widget.NestedScrollView>