<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/greyishLayoutBackground"
    tools:context=".consumer.ui.fragments.ConsumerPaymentFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/order_processing_loader_animator"
        android:layout_width="256dp"
        android:layout_height="256dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:lottie_rawRes="@raw/loadinganimation"
        app:lottie_autoPlay="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_loop="true"
        android:elevation="4dp"
        android:visibility="gone"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".58"
        />
<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/ll_consumer_payment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Order now"
        android:textColor="@color/primary_text_color"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:fontFamily="@font/poppins_semibold"
        />
    <RelativeLayout
        android:id="@+id/rl_order_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/stroke_rectangular"
        >
        <RelativeLayout
            android:id="@+id/rl_shipping_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_address_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shipping_to"
                android:textColor="@color/hint_text_color_dark_ui"
                android:textSize="16sp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_medium"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_address_preview_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/user_address_preview"
                android:textColor="@color/primary_text_color"
                android:textSize="16sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"
                android:text="fasdf"
                />

        </RelativeLayout>
        <View
            android:id="@+id/view_shipping_to"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/lightGreyish"
            android:layout_below="@id/rl_shipping_to"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_shipping_to"
            android:layout_marginStart="14dp"
            android:layout_marginTop="12dp"
            android:text="@string/items"
            android:textColor="@color/hint_text_color_dark_ui"
            android:fontFamily="@font/poppins"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_items_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/view_shipping_to"
            android:layout_marginEnd="10dp"
            android:text="180"
            android:textColor="@color/hint_text_color_dark_ui"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="12dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_delivery_charges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_items"
            android:layout_marginStart="14dp"
            android:layout_marginTop="2dp"
            android:text="@string/delivery_charges"
            android:textColor="@color/hint_text_color_dark_ui"
            android:fontFamily="@font/poppins"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_delivery_charges_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_items_value"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="2dp"
            android:text="Free"
            android:layout_marginEnd="10dp"
            android:textColor="@color/hint_text_color_dark_ui"
            android:fontFamily="@font/poppins"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_delivery_charges"
            android:layout_marginStart="14dp"
            android:layout_marginTop="2dp"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"
            android:text="@string/total_amount"
            android:textColor="@color/primary_text_color"
            android:fontFamily="@font/poppins_semibold"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_total_amount_value_rupees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_delivery_charges_value"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp"
            android:textSize="20sp"
            android:text="180"
            android:layout_marginEnd="10dp"
            android:textColor="@color/lightRed"
            android:fontFamily="@font/poppins_semibold"
            />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_delivery_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/stroke_rectangular"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_delivery_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Deliver to"
            android:textColor="@color/primary_text_color"
            android:textSize="20sp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins"
            />
        <View
            android:id="@+id/view_deliver"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/lightGreyish"
            android:layout_below="@id/tv_delivery_address"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_delivery_address"
            android:layout_marginTop="14dp"
            android:layout_marginStart="12dp"
            android:text="Rohit kumar"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/primary_text_color"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_user_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_user_name"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:text="Mahisbhatan"
            android:fontFamily="@font/poppins"
            android:textColor="@color/primary_text_color"
            android:layout_marginBottom="8dp"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ProgressBar
            android:id="@+id/place_order_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            android:indeterminateTint="@color/white"
            android:elevation="10dp"
            android:layout_alignStart="@id/btn_place_order"
            android:layout_alignEnd="@id/btn_place_order"
            android:layout_alignTop="@id/btn_place_order"
            android:layout_alignBottom="@id/btn_place_order"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/progress"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_place_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/langbuttondesign"
            android:backgroundTint="@color/yellowish"
            android:fontFamily="@font/poppins"
            android:text="@string/place_order"
            android:textAllCaps="false"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp" />

    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>